--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.0.0",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
